# pipeflight

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: create_bad_orders.py  orders.contract.json  orders.csv  validation_matrix.contract.json  validation_matrix.csv
src/pipeflight/: __init__.py  __main__.py  cli.py  contracts.py  core.py  readers.py  schema.py  validators.py  writers.py
tests/: test_core.py
